--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Big Picture by HTML5 UP</title>
+		<title>Quoc Thang Nguyen Profile</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -26,7 +26,7 @@
 						<li><a href="#two">Who We Are</a></li>
 						<li><a href="#work">Our Members</a></li>
 						<li><a href="#contact">Contact Us</a></li>
-						
+
 					</ul>
 				</nav>
 			</header>
@@ -95,7 +95,7 @@
 							</article>
 							<article class="from-left">
 								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="<strong>Thuy Le</strong> with strong knowledge of the modern music, he is the leading base player of the band. All of the band's performance is building around his tempo and rythym. " alt="" /></a>
-							</article>					
+							</article>
 						</div>
 
 				</div>
