--- a/index.html
+++ b/index.html
@@ -1,40 +1,46 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-		<title>Waiting for the next big things</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<h1>Loading ... </h1>
-				<p>Working on the next big things, please check back later.<br />Meanwhile, you can check out my <a href="https://github.com/ngqth/">GitHub</a> page.</p>
-			</header>
+<head>
+	<title>Waiting for the next big things</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="#">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<input type="submit" value="Sign Up" />
-			</form>
+<body class="is-preload">
 
-		<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; MIT.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</footer>
+	<!-- Header -->
+	<header id="header">
+		<h1>Loading ... </h1>
+		<p>Working on the next big things, please check back later.<br />Meanwhile, you can check out my <a
+				href="https://github.com/ngqth/">GitHub</a> page.</p>
+		<p>Thang</p>
+	</header>
 
-		<!-- Scripts -->
-			<script src="assets/js/main.js"></script>
+	<!-- Signup Form -->
+	<form id="signup-form" method="post" action="#">
+		<input type="email" name="email" id="email" placeholder="Email Address" />
+		<input type="submit" value="Sign Up" />
+	</form>
 
-	</body>
+	<!-- Footer -->
+	<footer id="footer">
+		<ul class="icons">
+			<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+			<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+		</ul>
+		<ul class="copyright">
+			<li>&copy; MIT.</li>
+			<li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+		</ul>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
